new feature primeng-galleria

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,7 @@
 <main>
-  <div class="content">
-    <h1 class="center">Yong & Stephans Hochzeit</h1>
+  <h1 class="center">Yong Yong & Stephans Hochzeit</h1>
+  <div class="center" style="width: 60%">
+    <app-primeng-galleria></app-primeng-galleria>
   </div>
 </main>
 
