new features countdown timer and formular

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,13 @@
 <main>
   <h1 class="center">Yong Yong & Stephans Hochzeit</h1>
-  <div class="center" style="width: 60%">
+  <div class="center main-container">
     <app-primeng-galleria></app-primeng-galleria>
+  </div>
+  <div class="center main-container">
+    <h1 id="countdown"></h1>
+  </div>
+  <div class="center main-container">
+    <app-info-tab></app-info-tab>
   </div>
 </main>
 
