--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -10,3 +10,8 @@ main {
     -o-background-size: cover;
     background-size: cover;
 }
+
+.main-container {
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
