--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,3 +121,5 @@ p {
         margin-block: 1.5rem;
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
