--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -1,30 +1,36 @@
 <mat-tab-group animationDuration="1000ms">
   <mat-tab [label]="tab1">
     <div style="width: 90vw"></div>
-    <p>Schreib uns eine Nachricht falls du uns zu- oder absagen möchtest.</p>
+    <p>Schreib uns eine Nachricht falls du uns zu oder absagen möchtest.</p>
     <form [formGroup]="formGroup" class="example-form">
       <mat-form-field class="example-full-width">
-        <mat-label>Dein Vor und Nachname oder als Familie nur Nachname</mat-label>
-        <input matInput [formControl]="nameFormControl" placeholder="Max Mustermann / Mustermann">
+        <mat-label>Vor und Nachnamen aller Personen die du an oder abmelden möchtest</mat-label>
+        <textarea matInput formControlName="names" minLength="3" maxlength="200" rows="5"
+          placeholder="Max Mustermann,&#10;Petra Mustermann,&#10;..."></textarea>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Personen Anzahl</mat-label>
+        <input matInput formControlName="count" maxlength="2" min="1" max="5" type="number" placeholder="1">
       </mat-form-field>
       <mat-chip-listbox class="mat-mdc-chip-set-stacked" aria-label="Message Selection">
         @for (message of messageSelection; track message) {
         <mat-chip-option [selected]="message.selected"
-          (selectionChange)="onSelectionChange($event)">{{message.selection}}</mat-chip-option>
+          (selectionChange)="onSelectionChange($event, formGroup)">{{message.selection}}</mat-chip-option>
         }
       </mat-chip-listbox>
       <mat-form-field class="example-full-width">
         <mat-label>Betreff</mat-label>
-        <input matInput [formControl]="subjectFormControl" placeholder="Zusage / Absage">
+        <input matInput formControlName="subject" maxlength="50" placeholder="Zusage / Absage">
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Deine Nachricht an uns</mat-label>
-        <textarea rows="6" matInput [formControl]="messageFormControl"
-          placeholder="Sehr gerne sage ich zu! / Sehr gerne sagen wir zu!"></textarea>
+        <textarea matInput formControlName="message" minlength="10" maxlength="500" rows="6"
+          placeholder="Sehr gerne sage ich zu!&#10;Ich muss leider absagen, weil...&#10;&#10;Liebe Grüße,&#10;Max Mustermann"></textarea>
       </mat-form-field>
     </form>
 
-    <button mat-fab extended style="margin: 1rem" [disabled]="!isFormGroupValid(formGroup.status)">
+    <button mat-fab extended style="margin: 1rem" [disabled]="!isFormGroupValid(formGroup.status)"
+      (click)="sendEmail(formGroup)">
       <mat-icon>favorite</mat-icon>
       Abschicken
     </button>
