--- a/src/app/shared/primeng-galleria/primeng-galleria.component.html
+++ b/src/app/shared/primeng-galleria/primeng-galleria.component.html
@@ -1,6 +1,6 @@
-<p-galleria #PrimengGalleriaContainer [value]="images" [autoPlay]="autoplay" [showThumbnails]="showThumbnails"
-  [showItemNavigators]="showItemNavigators" [circular]="true" [responsiveOptions]="responsiveOptions"
-  [numVisible]="numVisible" [containerStyle]="containerStyle">
+<p-galleria #PrimengGalleriaContainer [value]="images" [autoPlay]="autoplay" [transitionInterval]="transitionInterval"
+  [showThumbnails]="showThumbnails" [showItemNavigators]="showItemNavigators" [circular]="true"
+  [responsiveOptions]="responsiveOptions" [numVisible]="numVisible" [containerStyle]="containerStyle">
   <ng-template #item let-item>
     <img [src]="item.itemImageSrc" style="width: 100%; display: block" />
   </ng-template>
