enhance tab parking styles

--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -60,8 +60,8 @@
         <br>
         <p><strong>Parkplätze in der Nähe</strong></p>
         <br>
-        <span>Parkhaus direkt bei der Eventlocation <a
-            href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHowParking</a>.</span>
+        <span>Parkhaus direkt bei der Eventlocation <a href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHow
+            Parking</a>.</span>
         <br>
         <span>Öffentliche Parkplätze gegenüber der Eventlocation <a
             href="https://maps.app.goo.gl/FfA68qVud9zjRY7N6">Ehrenbergstraße</a>.</span>
@@ -85,6 +85,11 @@
         <p><strong>Parkplätze in der Umgebung</strong></p>
         <br>
         <span>In unmittelbarer Umgebung gibt es überall öffentliche Parkplätze.</span>
+      </div>
+      <div class="text">
+        <br>
+        <br>
+        <span style="font-size: 0.8rem;">*Parkplätze können kostenpflichtig sein.</span>
       </div>
     </div>
   </mat-tab>
