--- a/src/app/components/info-tab/info-tab.component.scss
+++ b/src/app/components/info-tab/info-tab.component.scss
@@ -27,7 +27,7 @@
 .submit-button {
     display: flex;
     justify-self: end;
-    margin-bottom: 16px;
+    margin: 0 8px 16px 8px;
 }
 
 .myIframe {
