--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -59,35 +59,41 @@
         <h1>Spreespeicher Eventlocation</h1>
         <br>
         <p><strong>Parkplätze in der Nähe</strong></p>
-        <br>
-        <span>Parkhaus direkt bei der Eventlocation <a href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHow
-            Parking</a>.</span>
-        <br>
-        <span>Öffentliche Parkplätze gegenüber der Eventlocation <a
-            href="https://maps.app.goo.gl/FfA68qVud9zjRY7N6">Ehrenbergstraße</a>.</span>
-        <br>
+        <ul>
+          <li><span>Parkhaus direkt bei der Eventlocation <a href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHow
+                Parking</a>.</span></li>
+          <li><span>Öffentliche Parkplätze gegenüber der Eventlocation <a
+                href="https://maps.app.goo.gl/FfA68qVud9zjRY7N6">Ehrenbergstraße</a>.</span></li>
+        </ul>
         <br>
         <p><strong>Parkplätze in der Umgebung</strong></p>
-        <br>
-        <span>Parkhaus direkt bei der Uber Arena <a href="https://maps.app.goo.gl/ZTDfvEZvBJA5wUMj8">Parkhaus East
-            SideMall</a>.</span>
+        <ul>
+          <li>
+            <span>Parkhaus direkt bei der Uber Arena <a href="https://maps.app.goo.gl/ZTDfvEZvBJA5wUMj8">Parkhaus East
+                SideMall</a>.</span>
+          </li>
+        </ul>
       </div>
-      <br>
       <div class="text">
         <br>
         <h1>Standesamt Berlin Tempelhof/Schöneberg</h1>
         <br>
         <p><strong>Parkplätze in der Nähe</strong></p>
-        <br>
-        <span>Öffentliche am Rauthaus <a href="https://maps.app.goo.gl/J3TiMyK7LECRgpjD6">Rathaus Parkplatz</a>.</span>
-        <br>
+        <ul>
+          <li>
+            <span>Öffentliche am Rauthaus <a href="https://maps.app.goo.gl/J3TiMyK7LECRgpjD6">Rathaus
+                Parkplatz</a>.</span>
+          </li>
+        </ul>
         <br>
         <p><strong>Parkplätze in der Umgebung</strong></p>
-        <br>
-        <span>In unmittelbarer Umgebung gibt es überall öffentliche Parkplätze.</span>
+        <ul>
+          <li>
+            <span>In unmittelbarer Umgebung gibt es überall öffentliche Parkplätze.</span>
+          </li>
+        </ul>
       </div>
       <div class="text">
-        <br>
         <br>
         <span style="font-size: 0.8rem;">*Parkplätze können kostenpflichtig sein.</span>
       </div>
