--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,15 +1,58 @@
 <main>
-  <h1 class="center">Yong Yong & Stephans Hochzeit</h1>
-  <div class="center main-container">
-    <app-primeng-galleria></app-primeng-galleria>
+  <div class="bg-fade-wrapper">
+    <div class="title-wrapper center">
+      <h1 class="center title">Yong Yong & Stephans Hochzeit</h1>
+    </div>
+    <div class="bg-fade background welcome-1-background"></div>
+    <div class="bg-fade background welcome-2-background"></div>
+    <div class="bg-fade background welcome-3-background"></div>
+    <!--div class="welcome center">
+      <app-primeng-galleria></app-primeng-galleria>
+    </div-->
   </div>
-  <div class="time-background">
-    <div class="center main-container">
+  <div class="background time-background">
+    <div class="center main-container" style="padding-top: calc(50vh - 121px)">
       <app-countdown [title]="countdownTitle" [date]="date"></app-countdown>
     </div>
   </div>
-  <div class="center main-container">
-    <app-info-tab></app-info-tab>
+  <div class="background infotab-background">
+    <div class="center main-container">
+      <app-info-tab></app-info-tab>
+    </div>
+  </div>
+  <div clas="center main-container">
+    <br>
+    <br>
+    <h1 class="center">Ablauf</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!--h1 class="center">Standesamt</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="center">Tee Zeremonie</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="center">Ankunft Eventlocation</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="center">Party!</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br-->
   </div>
 </main>
 
