--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group animationDuration="1000ms">
+<mat-tab-group class="tabgroup" animationDuration="1000ms">
   <mat-tab [label]="tab1">
     <div style="width:90vw"></div>
     <form [formGroup]="formGroup" class="example-form center">
@@ -40,10 +40,7 @@
       </button>
     </form>
   </mat-tab>
-  <!--mat-tab [label]="tab2">
-    <div style="width: 90vw"></div>
-  </mat-tab-->
-  <mat-tab [label]="tab3">
+  <mat-tab [label]="tab2">
     <div style="width: 90vw;"></div>
     <div class="myIframe">
       <iframe
@@ -52,9 +49,9 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </mat-tab>
-  <mat-tab [label]="tab4">
+  <mat-tab [label]="tab3">
     <div style="width: 90vw; height: 820px">
-      <div class="text">
+      <div class="text center">
         <br>
         <h1>Spreespeicher Eventlocation</h1>
         <br>
@@ -74,14 +71,14 @@
           </li>
         </ul>
       </div>
-      <div class="text">
+      <div class="text center">
         <br>
         <h1>Standesamt Berlin Tempelhof/Schöneberg</h1>
         <br>
         <p><strong>Parkplätze in der Nähe</strong></p>
         <ul>
           <li>
-            <span>Öffentliche am Rauthaus <a href="https://maps.app.goo.gl/J3TiMyK7LECRgpjD6">Rathaus
+            <span>Öffentliche Parkplätze am Rauthaus <a href="https://maps.app.goo.gl/J3TiMyK7LECRgpjD6">Rathaus
                 Parkplatz</a>.</span>
           </li>
         </ul>
@@ -93,7 +90,7 @@
           </li>
         </ul>
       </div>
-      <div class="text">
+      <div class="text center">
         <br>
         <span style="font-size: 0.8rem;">*Parkplätze können kostenpflichtig sein.</span>
       </div>
