--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,20 +1,123 @@
-main {
-    padding-top: 1rem;
-}
-
 .main-container {
     padding-top: 64px;
     padding-bottom: 64px;
 }
 
-.time-background {
-    background-image: url("../../../../public/images/carmen-alarcon-7yQ1yYsH2w0-unsplash.jpg");
+.title-wrapper {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    margin-top: 50px;
+    padding-top: 150px;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(6px);
+    width: 450px;
+    height: 450px;
+    border-radius: 250px;
+}
+
+.title {
+    margin: 16px;
+    padding: 16px;
+    text-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.background {
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    padding-top: 164px;
-    padding-bottom: 164px;
+}
+
+.welcome-1-background {
+    background-image: url("../../../../public/images/1-stacie-ong-bVDTiWORf5g-unsplash.jpg");
+    height: 100vh !important;
+}
+
+.welcome-2-background {
+    background-image: url("../../../../public/images/2-20190306_141851.jpg");
+    height: 100vh !important;
+}
+
+.welcome-3-background {
+    background-image: url("../../../../public/images/3-20240529_152706.jpg");
+    height: 100vh !important;
+}
+
+.time-background {
+    background-image: url("../../../../public/images/carmen-alarcon-7yQ1yYsH2w0-unsplash.jpg");
+    height: 100vh !important;
+}
+
+.infotab-background {
+    background-image: url("../../../../public/images/pawel-czerwinski-D9czFsZwLSg-unsplash.jpg");
+    height: 100vh !important;
+}
+
+.bg-fade-wrapper {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+}
+
+.bg-fade {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    background-size: cover;
+    background-position: center center;
+    opacity: 0;
+    animation-name: fade-zoom;
+    animation-duration: 18s;
+    animation-iteration-count: infinite;
+}
+
+.bg-fade:nth-child(2) {
+    animation-delay: 0s;
+}
+
+.bg-fade:nth-child(3) {
+    animation-delay: 6s;
+}
+
+.bg-fade:nth-child(4) {
+    animation-delay: 12s;
+}
+
+@keyframes fade-zoom {
+    0% {
+        opacity: 0;
+        transform: scale(100%);
+    }
+
+    16.66% {
+        opacity: 1;
+
+    }
+
+    33.33% {
+        opacity: 1;
+
+    }
+
+    48.66% {
+        opacity: 0;
+
+    }
+
+    100% {
+        opacity: 0;
+        transform: scale(110%);
+    }
+}
+
+@media screen and (max-height: 900px) {
+    .infotab-background {
+        height: auto !important;
+    }
 }
