include tab swipe feature adjust project structure

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="bg-fade-wrapper">
-    <div class="title-wrapper center">
+    <div class="title-wrapper">
       <h1 class="center title">Yong Yong & Stephans Hochzeit</h1>
     </div>
     <div class="bg-fade background welcome-1-background"></div>
