--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -1,4 +1,5 @@
-<mat-tab-group class="tabgroup" animationDuration="1000ms">
+<mat-tab-group class="tabgroup" animationDuration="1000ms" [selectedIndex]="selectedIndex"
+  (touchstart)="onSwipe($event, swipeCoord, swipeTime)" (touchend)="onSwipe($event, swipeCoord, swipeTime)">
   <mat-tab [label]="tab1">
     <div style="width:90vw"></div>
     <form [formGroup]="formGroup" class="example-form center">
