--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -4,22 +4,23 @@
 }
 
 .title-wrapper {
+    justify-self: end;
     position: relative;
     overflow: hidden;
-    text-align: center;
-    margin-top: 50px;
-    padding-top: 120px;
+    margin: 20px 20px;
+    padding-top: 86px;
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(6px);
-    width: 380px;
-    height: 380px;
-    border-radius: 190px;
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
 }
 
 .title {
     margin: 16px;
     padding: 16px;
+    font-size: 2.5rem;
     text-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
@@ -119,5 +120,19 @@
 @media screen and (max-height: 900px) {
     .infotab-background {
         height: auto !important;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .title-wrapper {
+        margin: 8px 8px;
+        padding-top: 6px;
+        width: 140px;
+        height: 140px;
+        border-radius: 70px;
+    }
+
+    .title {
+        font-size: 1.5rem;
     }
 }
