--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,12 +3,10 @@
     <div class="title-wrapper">
       <h1 class="center title">Yong Yong & Stephans Hochzeit</h1>
     </div>
+    <div class="titlebar-background background"></div>
     <div class="bg-fade background welcome-1-background"></div>
     <div class="bg-fade background welcome-2-background"></div>
     <div class="bg-fade background welcome-3-background"></div>
-    <!--div class="welcome center">
-      <app-primeng-galleria></app-primeng-galleria>
-    </div-->
   </div>
   <div class="background time-background">
     <div class="center main-container" style="padding-top: calc(50vh - 121px)">
@@ -20,10 +18,10 @@
       <app-info-tab></app-info-tab>
     </div>
   </div>
-  <div clas="center main-container">
+  <div class="center main-container">
     <br>
     <br>
-    <h1 class="center">Ablauf</h1>
+    <h1 class="center">Programm</h1>
     <br>
     <br>
     <br>
@@ -53,6 +51,11 @@
     <br>
     <br>
     <br-->
+  </div>
+  <div class="center main-container">
+    <!--div class="welcome center">
+      <app-primeng-galleria></app-primeng-galleria>
+    </div-->
   </div>
 </main>
 
