--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -4,7 +4,7 @@
 }
 
 .title-wrapper {
-    justify-self: end;
+    justify-self: start;
     position: relative;
     overflow: hidden;
     margin: 20px 20px;
@@ -56,6 +56,14 @@
 .infotab-background {
     background-image: url("../../../../public/images/pawel-czerwinski-D9czFsZwLSg-unsplash.jpg");
     height: 100vh !important;
+}
+
+.titlebar-background {
+    position: relative;
+    background-image: url("../../../../public/images/titlebar.svg");
+    margin-top: calc(78vh - 316px);
+    height: 22vh;
+    z-index: 1;
 }
 
 .bg-fade-wrapper {
@@ -134,5 +142,10 @@
 
     .title {
         font-size: 1.5rem;
+    }
+
+    .titlebar-background {
+        margin-top: calc(84vh - 148px);
+        height: 16vh;
     }
 }
