--- a/src/app/shared/components/countdown/countdown.component.scss
+++ b/src/app/shared/components/countdown/countdown.component.scss
@@ -1,5 +1,6 @@
 .countdown {
     background-color: rgb(255, 233, 247, 0.8);
+    backdrop-filter: blur(2px);
     padding: 16px;
     border-radius: 16px;
 }
