--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -137,7 +137,7 @@
 
 @media screen and (max-width: 2000px) {
     .welcome-2-background {
-        background-position: center center;
+        background-position: -100px center;
     }
 }
 
