--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="bg-fade-wrapper">
     <div class="title-wrapper">
-      <h1 class="center title">Yong Yong & Stephans Hochzeit</h1>
+      <div class="logo-background background"></div>
     </div>
     <div class="titlebar-background background"></div>
     <div class="bg-fade background welcome-1-background"></div>
