--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -64,8 +64,7 @@
 
 .logo-background {
     position: relative;
-    background-image: url("../../../../public/images/Logo.svg");
-    font-family: 'SouthernAirePersonalUseOnly';
+    background-image: url("../../../../public/images/Logo.png");
     height: 280px;
     width: 280px;
     z-index: 1;
