--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,13 +4,17 @@
       <div class="logo-background background"></div>
     </div>
     <div class="titlebar-background background"></div>
-    <div class="bg-fade background welcome-1-background"></div>
     <div class="bg-fade background welcome-3-background"></div>
     <div class="bg-fade background welcome-2-background"></div>
+    <div class="bg-fade background welcome-1-background"></div>
   </div>
-  <div class="background time-background">
-    <div class="center main-container" style="padding-top: calc(50vh - 121px)">
-      <app-countdown [title]="countdownTitle" [date]="date"></app-countdown>
+  <div class="background time-background" style="padding-top: 4vh">
+    <app-countdown class="center" [title]="countdownTitle" [date]="date"></app-countdown>
+    <div class="textbox center" style="margin-top: 5vh">
+      <p class="center">Es ist bald soweit. Wir können es kaum abwarten in diesen Tag zu starten. Familie, Freunde, ihr
+        seid herzlichst eingeladen, möchten wir diesen Moment unvergesslich machen. Deshalb wollen wir euch raten, zu
+        oder abzusagen für den späteren roten Faden. Eure Yong Yong & Stephan.
+      </p>
     </div>
   </div>
   <div class="background infotab-background">
