--- a/src/app/shared/components/countdown/countdown.component.scss
+++ b/src/app/shared/components/countdown/countdown.component.scss
@@ -1,6 +1,11 @@
 .countdown {
-    background-color: rgb(255, 233, 247, 0.8);
-    backdrop-filter: blur(2px);
+    // background-color: rgb(255, 233, 247, 0.8);
+    // background-color: rgb(243, 221, 225, 0.8);
+    // backdrop-filter: blur(2px);
+    // background-color: rgb(115, 46, 46);
+    // background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 75%);
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(4px);
     padding: 16px;
     border-radius: 16px;
 }
@@ -15,7 +20,8 @@
 .countbox {
     display: block;
     justify-items: center;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(4px);
     width: 100px;
     margin: 8px;
     border-radius: 16px;
