--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -13,7 +13,7 @@
     <div class="textbox center" style="margin-top: 5vh">
       <p class="center">Es ist bald soweit. Wir können es kaum abwarten in diesen Tag zu starten. Familie, Freunde, ihr
         seid herzlichst eingeladen, möchten wir diesen Moment unvergesslich machen. Deshalb wollen wir euch raten, zu
-        oder abzusagen für den späteren roten Faden. Eure Yong Yong & Stephan.
+        oder abzusagen für den späteren roten Faden. Eure Yong Yong & Stephan
       </p>
     </div>
   </div>
