--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,7 +56,7 @@ body {
 
 .mdc-tab__text-label {
     font-family: 'Gabriola';
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     color: var(--gold) !important;
 }
 
@@ -134,6 +134,12 @@ p {
         width: 100%;
         background: var(--red-to-pink-to-purple-horizontal-gradient);
         margin-block: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .mdc-tab__text-label {
+        font-size: 1.3rem;
     }
 }
 
