--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,10 @@
 @import '../node_modules/lightgallery/scss/lg-zoom';
 
 .lightgallery {
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .gallery-item {
@@ -13,8 +15,10 @@
 }
 
 .gallery-image {
-    margin: 0 0 4px 4px;
-    width: calc(33vw - 8px);
+    margin: -2px 0 -2px 0;
+    width: 33vw;
+    max-height: 32vw;
+    object-fit: cover !important;
 }
 
 body {
@@ -165,8 +169,9 @@ p {
     }
 
     .gallery-image {
-        margin: 0 0 4px 4px;
-        width: calc(50vw - 14px);
+        margin: -2px 0 -2px 0;
+        width: 50vw;
+        max-height: 45vw;
     }
 }
 
