--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -12,9 +12,9 @@
     <app-countdown class="center" [title]="countdownTitle" [date]="date"></app-countdown>
     <div class="textbox center" style="margin-top: 5vh">
       <p class="center">Es ist bald soweit. Wir können es kaum abwarten in diesen Tag zu starten. Familie, Freunde, ihr
-        seid herzlichst eingeladen, möchten wir diesen Moment unvergesslich machen. Deshalb wollen wir euch raten, zu
-        oder abzusagen für den späteren roten Faden. Eure Yong Yong & Stephan
-      </p>
+        seid herzlichst eingeladen, möchten wir diesen Moment lange in Erinnerung haben. Deshalb wollen wir euch raten,
+        zu oder abzusagen für den späteren roten Faden.</p>
+      <p class="center" style="margin-top: 18px">Eure Yong Yong & Stephan</p>
     </div>
   </div>
   <div class="background infotab-background">
@@ -61,7 +61,7 @@
       <app-primeng-galleria></app-primeng-galleria>
     </div-->
   </div>
-  <div style="overflow: hidden;">
+  <div style="overflow: hidden; margin: -2px 0 -2px;">
     <lightgallery class="lightgallery" [settings]="settings" [onBeforeSlide]="onBeforeSlide">
       <a data-lg-size="480-480-480, 800-800-800, 1400-1400" class="gallery-item"
         data-src="https://images.unsplash.com/photo-1581894158358-5ecd2c518883?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1406&q=80"
