--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -14,6 +14,7 @@
 .textbox p {
     width: 85%;
     font-family: "Gabriola";
+    line-height: 1.6em;
     font-size: 2rem;
     color: var(--gold);
 }
